[project]
name = "boardings"
version = "0.1.0"
description = "Project to determine the fastest airplane boarding method, based on premade assumptions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
